Fix floater state recovery to descend into blocks (which might contain floaters).  b=106658  r=kin  sr=waterson